Added config for qutebrowser, testing it currently

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -43,4 +43,6 @@ background_opacity 0.85
 background_blur 100
 
 ## advanced
-allow_remote_control no
+#listen_on unix:@kitty
+listen_on unix:/tmp/kitty
+allow_remote_control yes
