--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,7 @@ set -g mouse on
 # set -g allow-passthrough on
 # don't rename windows automatically
 set-option -g allow-rename off
-set-option -g default-command "arch -arch arm64 /bin/zsh"
+# set-option -g default-command "arch -arch arm64 /bin/zsh"
 # DESIGN TWEAKS
 
 # don't do anything when a 'bell' rings
@@ -80,7 +80,7 @@ set -g renumber-windows on
 set -sg escape-time 0
 # set -g default-terminal "xterm-256color"
 set-option -g focus-events on
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-kitty"
 # set-option -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ',xterm-kitty:cnorm=\E[?12h\E[?25h'
 set -g window-style "bg=default"
