tmux add bind to kill pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,8 @@ set -g status-left-length 100
 bind | split-window -h
 bind - split-window -v
 
+bind-key x kill-pane
+
 set -g history-limit 50000
 set -g default-terminal "xterm-kitty"
 #escape delay
